--- a/Faveo Helpdesk Pro/LoginDetailPage1Cell.xib
+++ b/Faveo Helpdesk Pro/LoginDetailPage1Cell.xib
@@ -238,7 +238,7 @@ Then click on Login button. If your login credentials are correct then you will 
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mBy-Sd-aFn" firstAttribute="top" secondItem="WBj-wh-usV" secondAttribute="bottom" constant="8" symbolic="YES" id="0Rl-4o-jPU"/>
                             <constraint firstItem="Vyi-HV-V0z" firstAttribute="trailing" secondItem="AF2-fe-zWu" secondAttribute="trailing" constant="5" id="1Y1-r0-R6T"/>
